tests/unconstrained-generics.chg.stderr


    return foo();
           ^^^^^  type error: unconstrained type variable created here

            throw new Error(`attempted to mangle ${ty.type}`);
            ^

Error: attempted to mangle TyVid








    
    


