tests/unconstrained-generics.chg
function foo<T>(): i32 {
    return 42;
}

function main(): i32 {
    return foo();
}
